--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: ruby
 
-sudo: false
+sudo: true
 
 matrix:
   include:
     - os: osx
-      osx_image: xcode8.3
+      osx_image: xcode9
       rvm: system
   fast_finish: true
 
