--- a/.github/workflows/google-fonts.yml
+++ b/.github/workflows/google-fonts.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           python-version: 3.8
       - name: Install Python packages
-        run: pip3 install gftools jinja2 protobuf
+        run: pip3 install gftools html2text jinja2 protobuf
 
       - name: Import Google Fonts
         run: ./developer/bin/import_google_fonts vendor/google-fonts
